--- a/css/style.css
+++ b/css/style.css
@@ -82,12 +82,20 @@ h1 {
 	margin: 20px 0px 20px 0px;
 }
 
+h2 {
+
+}
+
 h3 {
 	font-size: 24px;
 	margin: 20px 0px 20px 0px;
 	float: left;
 }
 
+h4 {
+	font-size:18px; 
+	margin-bottom:20px;
+}
 p{
 	font-size: 100%;
 	line-height: 24px;
@@ -238,24 +246,29 @@ header .tfbutton {
 .about-partners {
 	width: 100%;
 	height: 750px;
-	background-color: #f4f4f4;*/
+	/*background-color: #f4f4f4;*/
+	
+
 }
+
 
 
 .partner-img {
 	width: 30%;
 	float: left;
-	margin-top:30px;
+	margin-top:35px;
 	margin-bottom:35px;
+
+
 }
 
 .partner-text {
 	/*margin-left: 30%;*/
-	width:70%;
-	margin-top:30px;
+	width:65%;
+	margin-left:5%;
+	margin-top:35px;
 	margin-bottom:35px;
 	float:left;
-
 }
 
 
@@ -270,6 +283,13 @@ header .tfbutton {
 	border: none;
 	vertical-align: middle;
 	margin-top:24px;
+}
+
+.break {
+	width:100%; 
+	height=1px; 
+	color:black;
+
 }
 
 .top-bar  {
